Changed HTML title

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Simple Line Graph using SVG and d3.js</title>
+    <title>Heart Rate line graph</title>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
